# dashboard-mario-levels

./: LICENSE  README.md  inputs  pyproject.toml  requirements.txt  tasks.py
dashboard_mario_scene.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: hierarchical_clustering.ipynb
notebooks/.ipynb_checkpoints/: hierarchical_clustering-checkpoint.ipynb
src/: __init__.py  cluster_scenes.py  dashboard_mario_annotations.py  dashboard_mario_annotations_html.py  load_data.py
src/templates/: index.html
